[gd_scene load_steps=2 format=3 uid="uid://cfyx71wr2boo0"]

[ext_resource type="Script" path="res://Scripts/pause_menu.gd" id="1_cctc0"]

[node name="CanvasLayer" type="CanvasLayer"]

[node name="PauseMenu" type="Control" parent="."]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -0.5
offset_right = 0.5
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2.61, 2.61)
script = ExtResource("1_cctc0")

[node name="HBoxContainer" type="HBoxContainer" parent="PauseMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -35.0
offset_top = -33.0
offset_right = 35.0
offset_bottom = 33.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PauseMenu/HBoxContainer"]
layout_mode = 2

[node name="Resume" type="Button" parent="PauseMenu/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Resume
"

[node name="Save" type="Button" parent="PauseMenu/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Save"

[node name="Load" type="Button" parent="PauseMenu/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Load
"

[node name="MainMenu" type="Button" parent="PauseMenu/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Main Menu"

[connection signal="pressed" from="PauseMenu/HBoxContainer/VBoxContainer/Resume" to="PauseMenu" method="_on_resume_pressed"]
[connection signal="pressed" from="PauseMenu/HBoxContainer/VBoxContainer/Save" to="PauseMenu" method="_on_save_pressed"]
[connection signal="pressed" from="PauseMenu/HBoxContainer/VBoxContainer/Load" to="PauseMenu" method="_on_load_pressed"]
[connection signal="pressed" from="PauseMenu/HBoxContainer/VBoxContainer/MainMenu" to="PauseMenu" method="_on_main_menu_pressed"]
